--- a/sources/config-sans-oriya-ui.yaml
+++ b/sources/config-sans-oriya-ui.yaml
@@ -4,5 +4,9 @@ googleFonts: true
 includeSubsets:
 - from: Noto Sans
   name: GF_Latin_Core
+- from: Noto Sans
+  ranges:
+    - start: 0x02BC
+      end: 0x02BC
 sources:
 - NotoSansOriyaUI-MM.glyphs
